<resources>
    <string name="app_name">Royaly Boaly</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shadow_auth">shadowAuth</string>
    <string name="bg_image">bg_image</string>
    <string name="image_woman">image_woman</string>
    <string name="enter_your_email">Enter your\nemail</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="if_you_want_to_save_your_score_please_sign_up">If you want to\nsave your\nscore please\nsign up</string>
    <string name="phone">Phone</string>
    <string name="enter_your_phone">Enter your\nphone</string>
    <string name="rate">Rate\n%1$d</string>
    <string name="plus">+</string>
    <string name="minus">—</string>
    <string name="play">Play</string>
    <string name="bonus_game">Bonus Game</string>
    <string name="please_enter_a_valid_email">Введите корректный email</string>
    <string name="please_enter_a_valid_phone">Введите корректный phone</string>
    <string name="game_over">Game over</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="balance">Balance : %1$d</string>
    <string name="win">Win : %1$d</string>
    <string name="not_enough_money">Не хватает денег!</string>
    <string name="settings">Settings</string>
    <string name="music">Music</string>
    <string name="vibration">Vibration</string>
    <string name="seekbar">SeekBar</string>
    <string name="score">Score</string>
    <string name="_500">500</string>
    <string name="i_want_to_be_anonymous">I want to be anonymous</string>
    <string name="wait_for_completion">Дождитесь завершения!</string>
</resources>