<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".ui.auth.email.EmailAuthActivity">

    <ImageView
        android:id="@+id/iv_shadow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:contentDescription="@string/shadow_auth"
        android:src="@drawable/ic_shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_bg"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/circle_style"
        android:contentDescription="@string/bg_image"
        app:layout_constraintBottom_toTopOf="@id/iv_shadow"
        app:layout_constraintEnd_toEndOf="@id/iv_shadow"
        app:layout_constraintStart_toStartOf="@id/iv_shadow"
        app:layout_constraintTop_toTopOf="@id/iv_shadow" />

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/image_woman"
        android:src="@drawable/ic_woman"
        app:layout_constraintBottom_toBottomOf="@id/iv_bg"
        app:layout_constraintEnd_toEndOf="@id/iv_bg"
        app:layout_constraintStart_toStartOf="@id/iv_bg"
        app:layout_constraintTop_toTopOf="@id/iv_bg" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/Text"
        android:layout_marginTop="12dp"
        android:text="@string/enter_your_email"
        android:textAlignment="center"
        android:textSize="44sp"
        app:layout_constraintEnd_toEndOf="@id/iv_shadow"
        app:layout_constraintStart_toStartOf="@id/iv_shadow"
        app:layout_constraintTop_toBottomOf="@id/iv_bg" />

    <EditText
        android:id="@+id/ed_auth"
        style="@style/Text"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ed_radius"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <Button
        android:id="@+id/btn_sign_up"
        style="@style/Text"
        android:layout_marginTop="32dp"
        android:background="@drawable/design_button"
        android:paddingHorizontal="60dp"
        android:paddingTop="20dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_auth" />

</androidx.constraintlayout.widget.ConstraintLayout>