<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".ui.settings.SettingsActivity">

    <TextView
        android:id="@+id/tv_settings"
        android:layout_marginTop="60dp"
        android:text="@string/settings"
        style="@style/Text"
        android:textColor="@color/black"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="38dp"
        android:layout_marginVertical="170dp"
        android:background="@drawable/ic_shadow"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_settings">

        <TextView
            android:id="@+id/tv_music"
            android:layout_marginTop="60dp"
            android:text="@string/music"
            style="@style/Text"
            android:textSize="44sp" />

        <ImageView
            android:src="@drawable/ic_seek_bar"
            android:layout_width="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/seekbar" />

        <TextView
            android:id="@+id/tv_vibration"
            android:layout_marginTop="60dp"
            android:text="@string/vibration"
            style="@style/Text"
            android:textSize="44sp" />

        <ImageView
            android:src="@drawable/ic_seek_bar"
            android:layout_width="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/seekbar" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>