<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".ui.auth.BestActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/main_auth_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_sing_up"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kannadamn"
        android:text="@string/if_you_want_to_save_your_score_please_sign_up"/>

    <Button
        android:id="@+id/btn_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/design_button"
        android:textSize="42sp"
        android:textAllCaps="false"
        android:paddingTop="20dp"
        android:paddingHorizontal="100dp"
        android:text="@string/email"
        android:fontFamily="@font/kannadamn"
        android:textColor="@color/white"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sing_up"
        />

    <Button
        android:id="@+id/btn_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/design_button"
        android:textSize="42sp"
        android:textAllCaps="false"
        android:paddingTop="20dp"
        android:paddingHorizontal="90dp"
        android:text="@string/phone"
        android:fontFamily="@font/kannadamn"
        android:textColor="@color/white"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/btn_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/auth_layout"
        android:visibility="invisible"
        android:layout_marginTop="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_shadow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:contentDescription="@string/shadow_auth"
            android:src="@drawable/ic_shadow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_bg"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/circle_style"
            android:contentDescription="@string/bg_image"
            app:layout_constraintBottom_toTopOf="@id/iv_shadow"
            app:layout_constraintEnd_toEndOf="@id/iv_shadow"
            app:layout_constraintStart_toStartOf="@id/iv_shadow"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/image_woman"
            android:src="@drawable/ic_woman"
            app:layout_constraintBottom_toBottomOf="@id/iv_bg"
            app:layout_constraintEnd_toEndOf="@id/iv_bg"
            app:layout_constraintStart_toStartOf="@id/iv_bg"
            app:layout_constraintTop_toTopOf="@id/iv_bg" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kannadamn"
            android:text="@string/enter_your_email"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginTop="12dp"
            android:textSize="44sp"
            app:layout_constraintEnd_toEndOf="@id/iv_shadow"
            app:layout_constraintStart_toStartOf="@id/iv_shadow"
            app:layout_constraintTop_toBottomOf="@id/iv_bg" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="8dp"
            android:hint="@string/email"
            android:textAlignment="center"
            android:textColorHint="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ed_radius"
                android:fontFamily="@font/kannadamn"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.hbb20.CountryCodePicker
            app:layout_constraintBottom_toBottomOf="@id/ed_input"
            app:layout_constraintEnd_toEndOf="@id/ed_input"
            app:layout_constraintTop_toTopOf="@id/ed_input"
            android:id="@+id/ccp"
            app:ccp_showNameCode="false"
            app:ccp_autoDetectLanguage="true"
            app:ccp_autoDetectCountry="true"
            app:ccp_contentColor="@color/white"
            app:ccp_textSize="12dp"
            app:ccp_arrowSize="18dp"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/design_button"
            android:fontFamily="@font/kannadamn"
            android:paddingHorizontal="60dp"
            android:paddingTop="20dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_input" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>