<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bonus_game"
    tools:context=".ui.game.bonus.BonusGameActivity">

    <TextView
        android:id="@+id/tv_bonus_game"
        android:layout_marginTop="60dp"
        style="@style/Text"
        android:text="@string/bonus_game"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_bg_score"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="32sp"
        android:layout_marginTop="18dp"
        android:background="@drawable/design_black_hex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bonus_game" />

    <ImageView
        android:id="@+id/iv_score_number"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:background="@drawable/design_black_hex"
        app:layout_constraintBottom_toBottomOf="@id/iv_bg_score"
        app:layout_constraintEnd_toEndOf="@id/iv_bg_score"
        app:layout_constraintTop_toTopOf="@id/iv_bg_score" />

    <TextView
        android:layout_marginHorizontal="42dp"
        android:paddingTop="12dp"
        style="@style/Text"
        android:text="@string/score"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_bg_score"
        app:layout_constraintStart_toStartOf="@id/iv_bg_score"
        app:layout_constraintTop_toTopOf="@id/iv_bg_score" />

    <TextView
        style="@style/Text"
        android:id="@+id/tv_score"
        android:paddingTop="12dp"
        android:text="@string/_500"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_score_number"
        app:layout_constraintEnd_toEndOf="@id/iv_score_number"
        app:layout_constraintStart_toStartOf="@id/iv_score_number"
        app:layout_constraintTop_toTopOf="@id/iv_score_number" />


    <GridLayout
        android:id="@+id/bonus_game_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:alignmentMode="alignMargins"

        android:columnCount="3"
        android:columnOrderPreserved="false"
        android:rowCount="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_bg_score">


        <ImageView
            android:id="@+id/cell11"
            style="@style/Icon.Game.Bonus" />

        <ImageView
            android:id="@+id/cell12"
            style="@style/Icon.Game.Bonus" />

        <ImageView
            android:id="@+id/cell13"
            style="@style/Icon.Game.Bonus" />

        <ImageView
            android:id="@+id/cell21"
            style="@style/Icon.Game.Bonus" />

        <ImageView
            android:id="@+id/cell22"
            style="@style/Icon.Game.Bonus" />

        <ImageView
            android:id="@+id/cell23"
            style="@style/Icon.Game.Bonus" />

        <ImageView
            android:id="@+id/cell31"
            style="@style/Icon.Game.Bonus" />

        <ImageView
            android:id="@+id/cell32"
            style="@style/Icon.Game.Bonus" />

        <ImageView
            android:id="@+id/cell33"
            style="@style/Icon.Game.Bonus" />
    </GridLayout>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/btn_back_to_home"
        android:paddingTop="16dp"
        android:text="@string/back_to_menu"
        style="@style/Text"
        android:textAllCaps="false"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bonus_game_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>